Update CommunityPage: Add Why Join benefits section

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,7 +4,7 @@
     "jobs": "Jobs",
     "about": "About Us",
     "community": "Community",
-    "postJob": "Post Job",
+    "postJob": "Post Jobs",
     "contactUs": "Contact Us",
     "profile": "Profile",
     "settings": "Settings",
